2005-08-12  Werner Koch  <wk@g10code.com>

	* config-dialog.c (store_extension_value, load_extension_value):
	Changed key to "OutlGPG".

	* MapiGPGME.h (class MapiGPGME): New methods versionString and
	showVersion.  Breaks ABI but it doesn't matter as we are also
	going to change the name of the project.

	* Makefile.am: Renamed target to olgpgcore.
	* resource.h: Renamed to ...
	* olgpgcoredlgs.h: .. and removed cruft from generator.
	* gpgmedlgs.rc: Renamed to ..
	* olgpgcoredlgs.rc: ... and removed cruft.
	* libgpgmedlgs.def: Renamed to ..
	* olgpgcore.def: .. this.
	
2005-08-11  Werner Koch  <wk@g10code.com>

	* MapiGPGME.cpp (log_debug): New.  Rewrote the whole log stuff.
	It is not anymore per instance.
	(logDebug): New version with va_list arg.

	* MapiGPGME.cpp (passphraseCallback): Use gpgme_error_t becuase
	C++ enforces enum types.

	* engine-gpgme.c (op_lookup_keys): s/id/names/.  id is a reved
	word Obj-C and it is good style not to use it in plain C code.
	(op_sign_file_next): Use gpgme_passphrase_cb_t in declaration.
	(op_decrypt_next): Ditto.

	* MapiGPGME.cpp (count_recipients): Renamed from countRecipients
	method, made local and changed both callers.
	(log_key_info): Changed output format.  New arg PREFIX. Changed
	callers.
	(add_html_line_endings): Renamed from addHtmlLineEndings method
	and made local.
	(logDebug): Open in text mode.  Removed all superfluous "\r" from
	callers.

2005-08-09  Timo Schulz  <ts@g10code.com>

	* main.c (outlook_gpg_get_version): New.
	Use same version as the Outlook GPG plugin.

	* MapiGPGME.cpp [!__MINGW32__]: Changed sequence of include files.

2005-08-09  Werner Koch  <wk@g10code.com>

	* MapiGPGME.cpp (userid_from_key, keyid_from_key): New. Changed
	all calls to the deprecated gpgme_key_get_string_attr function by
	these.

	* MapiGPGME.h, MapiGPGME.cpp: Splitted into interace and
	implementation.
	* HashTable.h (class HashTable): No need to dll export anything.

2005-08-08  Werner Koch  <wk@g10code.com>
